--- a/src/com/vermeg/bookstore/gui/pbook/clientPBooks.fxml
+++ b/src/com/vermeg/bookstore/gui/pbook/clientPBooks.fxml
@@ -1,43 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Pagination?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="mainpain" prefHeight="608.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vermeg.bookstore.controller.pbook.ClientPBook">
    <children>
-      <GridPane fx:id="grid" layoutX="13.0" layoutY="8.0" prefHeight="623.0" prefWidth="756.0" AnchorPane.bottomAnchor="77.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="8.0">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="169.0" minHeight="10.0" prefHeight="169.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="121.0" minHeight="10.0" prefHeight="83.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <AnchorPane layoutX="2.0" prefHeight="73.0" prefWidth="777.0" style="-fx-background-color: #dbe0e3; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
          <children>
-            <AnchorPane fx:id="p1" maxWidth="1.7976931348623157E308" prefHeight="200.0">
-               <children>
-                  <ImageView fx:id="I1" fitHeight="160.0" fitWidth="118.0" layoutX="24.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../resources/51a0k07h-wL.jpg" />
-                     </image>
-                  </ImageView>
-                  <Button fx:id="b1" layoutX="149.0" layoutY="86.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="88.0" text="Add To card" textAlignment="CENTER" textFill="#e43d0b" wrapText="true" />
-                  <Hyperlink fx:id="hyperlink" layoutX="154.0" layoutY="50.0" text="View details" />
-               </children>
-            </AnchorPane>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="309.0" layoutY="23.0" text="PaperBooks List" textAlignment="CENTER" textFill="#00a98f">
+               <font>
+                  <Font name="Cambria Bold Italic" size="22.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <GridPane fx:id="grid" layoutX="53.0" layoutY="77.0" prefHeight="554.0" prefWidth="718.0" AnchorPane.bottomAnchor="77.0" AnchorPane.leftAnchor="53.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="77.0">
+         <children>
+
          </children>
       </GridPane>
-      <Pagination layoutX="147.0" layoutY="620.0" prefHeight="88.0" prefWidth="418.0" />
    </children>
 </AnchorPane>
