--- a/src/com/vermeg/bookstore/gui/EbookClient.fxml
+++ b/src/com/vermeg/bookstore/gui/EbookClient.fxml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="581.0" prefWidth="781.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vermeg.bookstore.controller.EbookClient">
+<AnchorPane prefHeight="645.0" prefWidth="807.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vermeg.bookstore.controller.EbookClient">
    <children>
-      <Pane layoutY="-8.0" prefHeight="586.0" prefWidth="208.0" style="-fx-background-color: #2E86C1;">
+      <Pane layoutY="-8.0" prefHeight="652.0" prefWidth="221.0" style="-fx-background-color: #2E86C1;">
          <children>
-            <Label layoutX="86.0" layoutY="14.0" prefHeight="64.0" prefWidth="118.0" text="E_Book" textFill="#f5f4f4">
+            <Label layoutX="117.0" layoutY="14.0" prefHeight="64.0" prefWidth="108.0" text="E_Book" textFill="#f5f4f4">
                <font>
-                  <Font name="System Italic" size="38.0" />
+                  <Font name="System Italic" size="31.0" />
                </font>
             </Label>
-            <Separator layoutX="87.0" layoutY="77.0" prefHeight="3.0" prefWidth="118.0" />
-            <ImageView fitHeight="81.0" fitWidth="95.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true">
+            <Separator layoutX="117.0" layoutY="70.0" prefHeight="3.0" prefWidth="95.0" />
+            <ImageView fitHeight="117.0" fitWidth="108.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../../Downloads/Friends.png" />
+                  <Image url="@../Images/129076555_383992306255936_8344229095233244758_n.png" />
                </image>
             </ImageView>
             <Label layoutX="5.0" layoutY="127.0" prefHeight="28.0" prefWidth="178.0" text="Find your book" textFill="#f2eeee">
@@ -31,190 +32,56 @@
                   <Font name="Bookman Old Style" size="19.0" />
                </font>
             </Label>
-            <TextField layoutX="13.0" layoutY="175.0" promptText="Find by name .." />
-         </children>
-      </Pane>
-      <TextField layoutX="13.0" layoutY="221.0" promptText="Find by author .." />
-      <Separator layoutX="4.0" layoutY="156.0" prefHeight="3.0" prefWidth="157.0" />
-      <Pane layoutX="208.0" prefHeight="143.0" prefWidth="599.0" style="-fx-background-color: #2E86C1;">
-         <children>
-            <ImageView fitHeight="50.0" fitWidth="45.0" layoutX="11.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
+            <TextField fx:id="tffindbyname" layoutX="13.0" layoutY="175.0" promptText="Find by name .." />
+            <ImageView fitHeight="115.0" fitWidth="108.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../book.png" />
+                  <Image url="@../Images/129076555_383992306255936_8344229095233244758_n.png" />
                </image>
             </ImageView>
-            <Label layoutX="50.0" layoutY="101.0" text="Art" textFill="#fcf9f9">
+         </children>
+      </Pane>
+      <TextField fx:id="tffindbyauthor" layoutX="13.0" layoutY="221.0" promptText="Find by author .." />
+      <Separator layoutX="4.0" layoutY="156.0" prefHeight="3.0" prefWidth="157.0" />
+      <Pane layoutX="219.0" prefHeight="138.0" prefWidth="588.0" style="-fx-background-color: #2E86C1;">
+         <children>
+            <Label layoutX="67.0" layoutY="104.0" text="Art" textFill="#fcf9f9">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
             </Label>
-            <ImageView fitHeight="50.0" fitWidth="45.0" layoutX="143.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../book.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="50.0" fitWidth="45.0" layoutX="271.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../book.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="50.0" fitWidth="45.0" layoutX="415.0" layoutY="78.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../book.png" />
-               </image>
-            </ImageView>
-            <Label layoutX="182.0" layoutY="103.0" text="Sport" textFill="#fffefe">
+            <Label layoutX="197.0" layoutY="103.0" text="Sport" textFill="#fffefe">
                <font>
                   <Font name="Arial Black" size="12.0" />
-               </font></Label>
-            <Label layoutX="450.0" layoutY="103.0" text="Romantic" textFill="#fffdfd">
+               </font>
+            </Label>
+            <Label layoutX="478.0" layoutY="103.0" text="Romantic" textFill="#fffdfd">
                <font>
                   <Font name="Arial Black" size="12.0" />
-               </font></Label>
-            <Separator layoutX="138.0" layoutY="136.0" prefHeight="3.0" prefWidth="90.0" />
-            <Label layoutX="315.0" layoutY="103.0" text="Religion" textFill="#f5f5f5">
+               </font>
+            </Label>
+            <Separator layoutX="170.0" layoutY="129.0" prefHeight="3.0" prefWidth="90.0" />
+            <Label layoutX="331.0" layoutY="104.0" text="Religion" textFill="#f5f5f5">
                <font>
                   <Font name="Arial Black" size="12.0" />
-               </font></Label>
-            <Separator layoutX="276.0" layoutY="132.0" prefHeight="9.0" prefWidth="108.0" />
-            <Separator layoutX="415.0" layoutY="132.0" prefHeight="9.0" prefWidth="118.0" />
+               </font>
+            </Label>
+            <Separator layoutX="305.0" layoutY="126.0" prefHeight="9.0" prefWidth="108.0" />
+            <Separator layoutX="450.0" layoutY="126.0" prefHeight="9.0" prefWidth="118.0" />
          </children>
       </Pane>
-      <Separator layoutX="240.0" layoutY="134.0" prefHeight="3.0" prefWidth="71.0" />
-      <VBox layoutX="208.0" layoutY="143.0" prefHeight="459.0" prefWidth="118.0">
-         <children>
-            <ImageView fitHeight="118.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../the%20tomb%20of%20neferatri.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="150.0" fitWidth="119.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../photograph.jpg" />
-               </image></ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="150.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../mumy.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-      <VBox layoutX="618.0" layoutY="143.0" prefHeight="459.0" prefWidth="118.0">
-         <children>
-            <ImageView fitHeight="118.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../the%20tomb%20of%20neferatri.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="150.0" fitWidth="119.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../photograph.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="150.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../mumy.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-      <VBox layoutX="478.0" layoutY="143.0" prefHeight="459.0" prefWidth="118.0">
-         <children>
-            <ImageView fitHeight="118.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../the%20tomb%20of%20neferatri.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="150.0" fitWidth="119.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../photograph.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="150.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../mumy.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-      <VBox layoutX="343.0" layoutY="143.0" prefHeight="459.0" prefWidth="118.0">
-         <children>
-            <ImageView fitHeight="118.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../the%20tomb%20of%20neferatri.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="150.0" fitWidth="119.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../photograph.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="150.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../mumy.jpg" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="PDF">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
+      <Separator layoutX="252.0" layoutY="130.0" prefHeight="3.0" prefWidth="71.0" />
+      <GridPane fx:id="grayda" layoutX="225.0" layoutY="143.0" prefHeight="502.0" prefWidth="582.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.800048828125" minWidth="10.0" prefWidth="149.20001220703125" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.800048828125" minWidth="10.0" prefWidth="151.40003662109373" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="512.0" minWidth="10.0" prefWidth="151.60001220703123" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="512.0" minWidth="10.0" prefWidth="149.19998779296873" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
    </children>
 </AnchorPane>
